--- a/project_Bethany.ipynb
+++ b/project_Bethany.ipynb
@@ -1592,20 +1592,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 309,
-   "id": "30f22d72",
+   "cell_type": "markdown",
+   "id": "074c9b86",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Add somelines to test git"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "13dfe5ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 20\n",
+    "print(a + b)"
+   ]
   },
   {
    "cell_type": "code",
